--- a/projeto-do-fluxo/login.xaml
+++ b/projeto-do-fluxo/login.xaml
@@ -1,7 +1,7 @@
-<Window x:Class="projeto_do_fluxo.MainPage"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Cadastro" Height="450" Width="300">
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="projeto_do_fluxo.MainPage"
+             Shell.NavBarIsVisible="false">
     <Grid Background="#FF6E6E6E">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -63,6 +63,6 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Window>
+</ContentPage>
 
 
